--- a/Assets/style.css
+++ b/Assets/style.css
@@ -14,3 +14,11 @@ body {
     background-color: beige;
     margin: 15px;
 }
+#contact-color{
+    background-color: beige;
+    margin: 15px;
+}
+#portfolio-color{
+    background-color: beige;
+    margin: 15px;
+}
